add calculator with extra functions

--- a/app/src/main/res/layout/content_display.xml
+++ b/app/src/main/res/layout/content_display.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/gray_dark"
+    android:background="@color/white_gray"
     android:orientation="vertical"
     android:weightSum="5">
 
-    <EditText
-        android:id="@+id/etOperation"
+    <TextView
+        android:id="@+id/tvOperation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -17,13 +17,15 @@
         android:layout_marginBottom="32dp"
         android:layout_weight="4"
         android:background="@android:color/transparent"
-        android:gravity="end|bottom"
         android:focusable="false"
-        tools:text="3*3"
+        android:gravity="end|bottom"
+        android:maxLines="3"
+        android:scrollIndicators="none"
+        android:scrollbars="vertical"
         android:textAlignment="textEnd"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/TextDisplayOperationSize"
-        android:textStyle="bold" />
+        tools:text="3*3" />
 
     <TextView
         android:id="@+id/tvResult"
@@ -34,9 +36,13 @@
         android:layout_marginBottom="32dp"
         android:layout_weight="1"
         android:gravity="end|center_vertical"
-        tools:text="9"
+        android:maxLines="1"
+        android:scrollIndicators="none"
+        android:scrollbars="vertical"
         android:textAlignment="textEnd"
-        android:textColor="@color/white_gray"
-        android:textSize="@dimen/TextDisplayResultSize" />
+        android:textColor="@color/original_blue"
+        android:textSize="@dimen/TextDisplayResultSize"
+        android:textStyle="bold"
+        tools:text="9" />
 
 </LinearLayout>
