--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,15 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/gray_dark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/gray_dark</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:textViewStyle">@style/CustomTextViewStyle</item>
     </style>
 
+    <style name="CustomTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/raleway</item>
+    </style>
 
     <style name="PadNumericButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">wrap_content</item>
@@ -16,8 +20,18 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/TextNumericPadButtonSize</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="PadAdvancedButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/TextNumericPadButtonSize</item>
+        <item name="android:textColor">@color/original_blue</item>
+        <item name="android:background">@color/gray</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
