add transaction fragment

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
 
     <style name="CustomTextViewStyle" parent="android:Widget.TextView">
         <item name="android:fontFamily">@font/raleway</item>
+        <item name="android:fontFeatureSettings">lnum</item>
     </style>
 
     <style name="PadNumericButton" parent="Widget.AppCompat.Button">
