--- a/app/src/main/res/layout/fragment_bank_account.xml
+++ b/app/src/main/res/layout/fragment_bank_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".presentation.home.bank.BankAccountFragment">
+    tools:context=".presentation.ui.home.bank.BankAccountFragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -48,14 +48,14 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:text="500,59€"
                 android:textColor="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvBankName" />
+                app:layout_constraintTop_toBottomOf="@+id/tvBankName"
+                tools:text="500,59€" />
 
             <TextView
                 android:id="@+id/tvBankAccount"
@@ -64,13 +64,22 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
-                android:text="ES XXXX XXXX XXXX XXX29"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvMoney" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMoney"
+                tools:text="ES XXXX XXXX XXXX XXX29" />
+
+            <include
+                layout="@layout/view_loading_white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
