implement payment methods, add api calls to home and implement about activity

--- a/app/src/main/res/layout/content_advanced_pad.xml
+++ b/app/src/main/res/layout/content_advanced_pad.xml
@@ -79,7 +79,7 @@
         <Button
             android:id="@+id/btFact"
             style="@style/PadAdvancedButton"
-            android:text="@string/fact_symbol" />
+            android:text="@string/elevation_symbol" />
     </LinearLayout>
 
 
