--- a/app/src/main/res/layout/content_currency_converter.xml
+++ b/app/src/main/res/layout/content_currency_converter.xml
@@ -2,9 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="16dp"
     android:layout_marginTop="24dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="4dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:layout_constraintEnd_toEndOf="parent"
@@ -13,7 +14,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="16dp">
 
         <ImageView
             android:id="@+id/ivCurrency"
@@ -44,7 +46,9 @@
             android:id="@+id/clFrom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_spinner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +61,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:inputType="number"
                 android:text="@string/one_numeric"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -75,23 +80,15 @@
                 app:layout_constraintStart_toEndOf="@+id/etFromValue"
                 app:layout_constraintTop_toTopOf="@+id/etFromValue" />
 
-            <LinearLayout
-                android:id="@+id/llDivider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginEnd="16dp"
-                android:background="@color/gray_soft"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clTo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_spinner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +102,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:inputType="number"
                 android:text="@string/one_numeric"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
