--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,83 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="10">
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="6">
-
-        <include
-            layout="@layout/content_display"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <ImageView
-            android:id="@+id/ivBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_arrow"
-            android:tint="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
-
-
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="4">
+        android:background="@color/white_gray"
+        android:gravity="top"
+        android:orientation="vertical"
+        app:umanoPanelHeight="40dp"
+        app:umanoShadowHeight="0dp">
 
         <RelativeLayout
-            android:id="@+id/padContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/layoutNumeric"
-                layout="@layout/content_numeric_pad"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@id/layoutOperations" />
+                android:id="@+id/layoutDisplay"
+                layout="@layout/content_display"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <include
-                android:id="@+id/layoutOperations"
-                layout="@layout/content_operations_pad"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_toStartOf="@id/llAdvanced" />
 
-            <LinearLayout
-                android:id="@+id/llAdvanced"
-                android:layout_width="30dp"
+            <android.support.v4.widget.DrawerLayout
+                android:id="@+id/drawerLayout"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:background="@color/gray"
-                android:orientation="vertical">
+                android:layout_below="@id/layoutDisplay"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layoutDisplay">
 
-                <ImageView
-                    android:id="@+id/ivArrow"
+                <RelativeLayout
+                    android:id="@+id/padContent"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_arrow_left" />
+                    android:layout_height="match_parent">
 
-            </LinearLayout>
+                    <include
+                        android:id="@+id/layoutNumeric"
+                        layout="@layout/content_numeric_pad"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentStart="true"
+                        android:layout_toStartOf="@id/layoutOperations" />
 
+                    <include
+                        android:id="@+id/layoutOperations"
+                        layout="@layout/content_operations_pad"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_toStartOf="@id/llAdvanced" />
+
+                    <LinearLayout
+                        android:id="@+id/llAdvanced"
+                        android:layout_width="30dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentEnd="true"
+                        android:background="@color/gray"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/ivArrow"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_arrow_left" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+                <include layout="@layout/layout_drawer" />
+
+            </android.support.v4.widget.DrawerLayout>
         </RelativeLayout>
 
-        <include layout="@layout/layout_drawer" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="top">
 
-    </android.support.v4.widget.DrawerLayout>
+            <FrameLayout
+                android:id="@+id/flHistory"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/ivDropDown"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/ivDropDown"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:rotation="270"
+                android:src="@drawable/ic_arrow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
 
 
-</LinearLayout>
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+
+
+    <ImageView
+        android:id="@+id/ivBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_arrow"
+        android:tint="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</RelativeLayout>
+
+
+
+
+
