--- a/app/src/main/res/layout/content_display.xml
+++ b/app/src/main/res/layout/content_display.xml
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white_gray"
-    android:orientation="vertical"
-    android:weightSum="5">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvOperation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        android:layout_weight="4"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
+        android:ellipsize="start"
         android:focusable="false"
         android:gravity="end|bottom"
         android:maxLines="3"
-        android:scrollIndicators="none"
-        android:scrollbars="vertical"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="@dimen/TextDisplayOperationSize"
-        tools:text="3*3" />
+        app:layout_constraintBottom_toTopOf="@+id/tvResult"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="3*37859678346785467863786578657834687543654786547864578365347865748657846548793675843645786475869547836784539678456758467354" />
 
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:gravity="end|center_vertical"
         android:maxLines="1"
-        android:scrollIndicators="none"
-        android:scrollbars="vertical"
         android:textAlignment="textEnd"
         android:textColor="@color/original_blue"
         android:textSize="@dimen/TextDisplayResultSize"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="9" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
