--- a/app/src/main/res/layout/item_calculation_history.xml
+++ b/app/src/main/res/layout/item_calculation_history.xml
@@ -12,6 +12,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="textEnd"
+        android:textColor="@color/black"
+        android:textSize="@dimen/TextDisplayOperationSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,9 +26,17 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="textEnd"
+        android:textColor="@color/original_blue"
+        android:textSize="@dimen/TextDisplayResultSize"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvOperation" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/tvResult" />
 
 </android.support.constraint.ConstraintLayout>
