--- a/app/src/main/res/layout/content_loan_calculator.xml
+++ b/app/src/main/res/layout/content_loan_calculator.xml
@@ -24,7 +24,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_interest"
+            android:src="@drawable/ic_loan"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/interest_calculator"
+            android:text="@string/loan_calculator"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -62,7 +62,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="@string/total_value"
+                android:text="@string/loan"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -191,6 +191,20 @@
             app:layout_constraintTop_toBottomOf="@+id/clPeriod" />
 
         <TextView
+            android:id="@+id/tvMonthlyPay"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/monthly_pay"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvResult" />
+
+
+        <TextView
             android:id="@+id/tvInterest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -201,7 +215,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvResult" />
+            app:layout_constraintTop_toBottomOf="@+id/tvMonthlyPay" />
 
     </android.support.constraint.ConstraintLayout>
 
