--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -41,6 +41,11 @@
         </android.support.constraint.ConstraintLayout>
 
         <FrameLayout
+            android:id="@+id/flLoanCalculator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <FrameLayout
             android:id="@+id/flInterestCalculator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
